--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+    border: none;
 }
 
 /* ----- */
@@ -19,3 +20,42 @@
     --black-color: #000000;
 }
 
+/* mobile s, 320px */
+
+body {
+    font-family: var(--ff-roboto);
+    width: 32rem;
+}
+
+.container {
+    width: 28rem;
+    margin: 0 auto;
+}
+
+.section-1 {
+    height: 50vh;
+    background-image: url(https://images.unsplash.com/photo-1550574364-0f0c891d6353?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c2FvJTIwbHVpc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60);
+    background-position: center center;
+    background-size: cover;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 3rem;
+}
+
+.headerFlags {
+    display: flex;
+    gap: 2rem;
+}
+
+.fa-flag-usa, .fa-canadian-maple-leaf, .fa-share-nodes {
+    font-size: 2.5rem;
+    color: var(--white-color);
+} 
+
+.section-2 {
+    height: 50vh;
+    background-color: var(--green-color);
+}
