--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     font-size: 62.5%;
     --ff-roboto: 'Roboto', sans-serif;
     --ff-gloria: 'Gloria Hallelujah', cursive;
-    --ff-fredericka: 'Fredericka the Great', cursive;
+    --ff-fredericka: 'Fredericka the Great', cursive; /* Check better font. */
 
     --green-color: #2BA549;
     --white-color: #ffffff;
@@ -34,7 +34,6 @@ body {
 .container {
     width: 32rem;
     margin: 0 auto;
-    position: relative;
 }
 
 .section-1 {
@@ -73,7 +72,8 @@ body {
 } 
 
 .section-2 {
-    background-color: var(--green-color);
+    background-image: linear-gradient(var(--green-color), #207936, black);
+    position: relative;
 }
 
 .wrapFirstInfoSection-2 {
@@ -87,7 +87,7 @@ body {
 .imageSection-2 {
     border-radius: 1rem;
     position: absolute;
-    top: 21rem;
+    top: -6rem;
 }
 
 .textSection-2 {
@@ -100,7 +100,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 6rem;
     margin-top: 3rem;
 }
 
@@ -108,7 +108,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 6rem;
     margin-top: 3rem;
 }
 
