--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     font-family: var(--ff-roboto);
     width: 32rem;
     margin: 0 auto;
-    background-color: var(--green-color);
+    background-color: var(--white-color);
 }
 
 .container {
@@ -74,6 +74,7 @@ body {
 .section-2 {
     background-image: linear-gradient(var(--green-color), #207936, black);
     position: relative;
+    /* height: 50vh; */
 }
 
 .wrapFirstInfoSection-2 {
@@ -112,7 +113,7 @@ body {
     margin-top: 3rem;
 }
 
-.thirdWrapIconsSection-2 {
+.secondWrapIconsSection-2 {
     padding-bottom: 3rem;
 }
 
