--- a/media.css
+++ b/media.css
@@ -11,6 +11,15 @@
         width: 33.5rem;
     }
 
+    .imageSection-2 {
+        top: -8rem;
+        width: 25rem;
+    }    
+
+    .textSection-2 {
+        margin-top: 8rem;
+    }
+
     .fa-globe, .fa-envelope, .fa-whatsapp, .fa-facebook, .fa-instagram, .fa-youtube, .fa-x-twitter {
         font-size: 4rem;
     }
@@ -37,6 +46,15 @@
     .fa-share-nodes {
         font-size: 4rem;
     } 
+
+    .imageSection-2 {
+        top: -8.5rem;
+        width: 28rem;
+    }    
+
+    .textSection-2 {
+        margin-top: 9rem;
+    }
 
     .fa-globe, .fa-envelope, .fa-whatsapp, .fa-facebook, .fa-instagram, .fa-youtube, .fa-x-twitter {
         font-size: 5rem;
