--- a/media.css
+++ b/media.css
@@ -17,7 +17,7 @@
     }    
 
     .textSection-2 {
-        margin-top: 8rem;
+        font-size: 2rem; 
     }
 
     .fa-globe, .fa-envelope, .fa-whatsapp, .fa-facebook, .fa-instagram, .fa-youtube, .fa-x-twitter {
@@ -53,7 +53,7 @@
     }    
 
     .textSection-2 {
-        margin-top: 9rem;
+        font-size: 2.3rem; 
     }
 
     .fa-globe, .fa-envelope, .fa-whatsapp, .fa-facebook, .fa-instagram, .fa-youtube, .fa-x-twitter {
