--- a/style.css
+++ b/style.css
@@ -93,10 +93,10 @@ body {
 .textSection-2 {
     margin-top: 3rem;
     text-align: center;
-    text-shadow: 1px 1px 2.5px #46fd74;
+    text-shadow: 3px 3px 8px var(--black-color);
     font-size: 1.5rem;
     font-family: var(--ff-poppins);
-    color: var(--black-color);
+    color: var(--white-color);
 }
 
 .firstWrapIconsSection-2 {
